salesforce-main/src/main/default/objects/Delivery__c/Delivery__c.object-meta.xml
<CustomObject>
    <description>Delivery object to track order items that need to be dispatched relating to either booking lines or order products (for LM only orders)</description>
    <label>Delivery</label>
    <nameField>
        <displayFormat>DEL-{0000000}</displayFormat>
        <label>Delivery Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deliveries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>