salesforce-main/src/main/default/objects/Delivery__c/fields/Added_To_Shortage__c.field-meta.xml
<CustomField>
    <fullName>Added_To_Shortage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quantity has been added to stock shortage - used to ensure it is not counted more than once during multiple allocation attempts</description>
    <label>Added To Shortage</label>
    <type>Checkbox</type>
</CustomField>