salesforce-main/src/main/default/objects/Delivery__c/fields/Allocation_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of times stock has attempted to be allocated to this delivery</description>
    <label>Allocation Attempts</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>