salesforce-main/src/main/default/objects/Delivery__c/fields/Allocation_Date__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Date__c</fullName>
    <description>Timestamp when stock was allocated to the record</description>
    <label>Allocation Date</label>
    <type>DateTime</type>
</CustomField>