salesforce-main/src/main/default/objects/Delivery__c/fields/Auto_Allocate__c.field-meta.xml
<CustomField>
    <fullName>Auto_Allocate__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked the delivery record will attempt to allocate stock when it is set to &apos;Awaiting Allocation&apos;, otherwise it will await assignment by other means.</description>
    <label>Auto Allocate</label>
    <type>Checkbox</type>
</CustomField>