salesforce-main/src/main/default/objects/Delivery__c/fields/Awaiting_Allocation_Date__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Allocation_Date__c</fullName>
    <description>Timestamp of when the record was ready for stock allocation. When stock is being allocated can be used to see how long it has been waiting.</description>
    <label>Awaiting Allocation Date</label>
    <type>DateTime</type>
</CustomField>