salesforce-main/src/main/default/objects/Delivery__c/fields/Booking_Line__c.field-meta.xml
<CustomField>
    <fullName>Booking_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Booking line that delivery is for - course orders</description>
    <label>Booking Line</label>
    <referenceTo>Booking_Line__c</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>