salesforce-main/src/main/default/objects/Delivery__c/fields/Booking_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Booking_Line_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Booking line Id -required as a unique field to enforce the lookup to be a 1-1 relationship</description>
    <label>Booking Line Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>