salesforce-main/src/main/default/objects/Delivery__c/fields/BPP_API_Call_Identifier__c.field-meta.xml
<CustomField>
    <fullName>BPP_API_Call_Identifier__c</fullName>
    <formula>IF(INCLUDES(Order_Product__r.blng__RevenueRecognitionRule__r.API_Call_Identifiers__c , &quot;Delivery - Full - RR Date&quot;), &quot;Delivery - Full - RR Date&quot;, null)</formula>
    <label>API Call Identifier</label>
    <type>Text</type>
</CustomField>