salesforce-main/src/main/default/objects/Delivery__c/fields/BPP_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>BPP_Cost_Center__c</fullName>
    <label>Cost Center</label>
    <length>100</length>
    <type>Text</type>
</CustomField>