salesforce-main/src/main/default/objects/Delivery__c/fields/BPP_Delivery_Line_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>BPP_Delivery_Line_Total_Price__c</fullName>
    <description>Related Order Product List Price, minus the Discount Amount. Then multiplied by Delivery Quantity</description>
    <formula>(Order_Product__r.ListPrice - Order_Product__r.BPP_Discount_Amount__c) * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Line Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>