salesforce-main/src/main/default/objects/Delivery__c/fields/BPP_Division__c.field-meta.xml
<CustomField>
    <fullName>BPP_Division__c</fullName>
    <label>Division</label>
    <length>100</length>
    <type>Text</type>
</CustomField>