salesforce-main/src/main/default/objects/Delivery__c/fields/BPP_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>BPP_Legal_Entity__c</fullName>
    <formula>Order_Product__r.blng__LegalEntity__c</formula>
    <label>Legal Entity</label>
    <type>Text</type>
</CustomField>