salesforce-main/src/main/default/objects/Delivery__c/fields/BPP_Order_Product_Bookings__c.field-meta.xml
<CustomField>
    <fullName>BPP_Order_Product_Bookings__c</fullName>
    <formula>Order_Product__r.SBQQ__OrderProductBookings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Product Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>