salesforce-main/src/main/default/objects/Delivery__c/fields/BPP_Product__c.field-meta.xml
<CustomField>
    <fullName>BPP_Product__c</fullName>
    <label>Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>