salesforce-main/src/main/default/objects/Delivery__c/fields/BPP_Project__c.field-meta.xml
<CustomField>
    <fullName>BPP_Project__c</fullName>
    <label>Project</label>
    <length>100</length>
    <type>Text</type>
</CustomField>