salesforce-main/src/main/default/objects/Delivery__c/fields/BPP_Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>BPP_Revenue_Amount__c</fullName>
    <formula>Booking_Line__r.blng_PreratedAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>