salesforce-main/src/main/default/objects/Delivery__c/fields/BPP_Revenue_Recognition_Rule__c.field-meta.xml
<CustomField>
    <fullName>BPP_Revenue_Recognition_Rule__c</fullName>
    <formula>Order_Product__r.blng__RevenueRecognitionRule__c</formula>
    <label>Revenue Recognition Rule</label>
    <type>Text</type>
</CustomField>