salesforce-main/src/main/default/objects/Delivery__c/fields/BPP_Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>BPP_Shipping_Method__c</fullName>
    <description>Populated using related Courier&apos;s Export Code</description>
    <formula>IF( NOT( ISBLANK( Courier__c ) ) ,  Courier__r.Export_Code__c , NULL)</formula>
    <label>Shipping Method</label>
    <type>Text</type>
</CustomField>