salesforce-main/src/main/default/objects/Delivery__c/fields/Consolidated_Address__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Address__c</fullName>
    <description>Concatenates recipient + address lines</description>
    <formula>IF(Delivered_to_Customer_Address__r.Student__r.IsPersonAccount = False,  Delivered_to_Customer_Address__r.Student__r.Name &amp; &quot;|&quot;, &quot;&quot;) &amp;
IF(LEN(Address_Line_1__c)&gt;0, Address_Line_1__c, &quot;&quot;)&amp;
IF(LEN(Address_Line_2__c)&gt;0, &quot;|&quot; &amp; Address_Line_2__c, &quot;&quot;)&amp;
IF(LEN(Address_Line_3__c)&gt;0, &quot;|&quot; &amp; Address_Line_3__c,&quot;&quot;)</formula>
    <label>Consolidated Address</label>
    <type>Text</type>
</CustomField>