salesforce-main/src/main/default/objects/Delivery__c/fields/Courier__c.field-meta.xml
<CustomField>
    <fullName>Courier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Company responsible for delivering items</description>
    <label>Courier</label>
    <referenceTo>Courier__c</referenceTo>
    <relationshipLabel>Requested Deliveries</relationshipLabel>
    <relationshipName>Requested_Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>