salesforce-main/src/main/default/objects/Delivery__c/fields/Days_in_Sent_for_Fulfilment_Status__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Sent_for_Fulfilment_Status__c</fullName>
    <description>Calculates the number of days between the Sent for Fulfilment Date and Dispatched Date. If Dispatched Date is blank, calculates the number of days between the Sent for Fulfilment Date and today&apos;s date</description>
    <formula>IF(
	ISBLANK(Sent_for_Fulfilment_On__c),
	NULL,
	IF(
		NOT(ISBLANK( Dispatched_Date__c )),
		Dispatched_Date__c - Sent_for_Fulfilment_On__c,
		TODAY() - Sent_for_Fulfilment_On__c
	)
)</formula>
    <label>Days in Sent for Fulfilment Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>