salesforce-main/src/main/default/objects/Delivery__c/fields/Delivered_to_BPP_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivered_to_BPP_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BPP address for deliveries</description>
    <label>Delivered to BPP Address</label>
    <referenceTo>Study_Location__c</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>