salesforce-main/src/main/default/objects/Delivery__c/fields/Delivered_to_Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivered_to_Customer_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer address</description>
    <label>Delivered to Customer Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>