salesforce-main/src/main/default/objects/Delivery__c/fields/Delivery_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Instructions__c</fullName>
    <description>Delivery instructions obtained from the selected delivery address record</description>
    <label>Delivery Instructions</label>
    <type>TextArea</type>
</CustomField>