salesforce-main/src/main/default/objects/Delivery__c/fields/Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status__c</fullName>
    <description>Status of delivery</description>
    <label>Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Awaiting Allocation</fullName>
                <default>true</default>
                <label>Awaiting Allocation</label>
            </value>
            <value>
                <fullName>Ready for Fulfilment</fullName>
            </value>
            <value>
                <fullName>Sent for Fulfilment</fullName>
            </value>
            <value>
                <fullName>Dispatched</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>