salesforce-main/src/main/default/objects/Delivery__c/fields/Dispatch_Reference__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Reference__c</fullName>
    <description>Dispatch reference - updated by the fulfilment centre</description>
    <label>Dispatch Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>