salesforce-main/src/main/default/objects/Delivery__c/fields/Dispatched_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispatched_Date__c</fullName>
    <description>Date the item was dispatched for delivery</description>
    <label>Dispatched Date</label>
    <type>Date</type>
</CustomField>