salesforce-main/src/main/default/objects/Delivery__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email address that electronic deliveries will be sent to and where the customer can informed regarding delivery information</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>