salesforce-main/src/main/default/objects/Delivery__c/fields/EORI_Number__c.field-meta.xml
<CustomField>
    <fullName>EORI_Number__c</fullName>
    <description>EORI Number for the company making the order. This is required for shipments going through customs. Acquired from the related order account.</description>
    <formula>Order_Product__r.Order.Account.EORI_Number__c</formula>
    <label>EORI Number</label>
    <type>Text</type>
</CustomField>