salesforce-main/src/main/default/objects/Delivery__c/fields/Fulfilment_Id__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment_Id__c</fullName>
    <description>Uses the Booking Id if available, otherwise displays the order Id</description>
    <formula>IF( ISBLANK( Booking_Line__c ) ,
Order_Product__r.Order.OrderNumber  ,
Booking_Line__r.Booking__r.Name )</formula>
    <label>Fulfilment Id</label>
    <type>Text</type>
</CustomField>