salesforce-main/src/main/default/objects/Delivery__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Order Product that delivery is for - LM orders</description>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>