salesforce-main/src/main/default/objects/Delivery__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone number customer can be contacted on to receive delivery</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>