salesforce-main/src/main/default/objects/Delivery__c/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <description>Recipient of the delivery</description>
    <label>Recipient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>