salesforce-main/src/main/default/objects/Delivery__c/fields/Requested_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Delivery_Date__c</fullName>
    <description>Delivery date - used to determine when items should be dispatched</description>
    <label>Requested Delivery Date</label>
    <type>Date</type>
</CustomField>