salesforce-main/src/main/default/objects/Delivery__c/fields/Revenue_Recognition_Excluded__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognition_Excluded__c</fullName>
    <description>Indicates whether delivery should be excluded from revenue recognition.  If true, no Revenue Transaction will be created.</description>
    <formula>OR(ISPICKVAL(Order_Product__r.Order.Booking_Type__c, &quot;Apprenticeship bookings&quot;),
ISPICKVAL(Order_Product__r.Order.Booking_Type__c, &quot;Poland bookings&quot;),
ISPICKVAL(Order_Product__r.Order.Booking_Type__c, &quot;Channel Island bookings&quot;),
ISPICKVAL(Order_Product__r.Order.Booking_Type__c, &quot;Fixed Price Key Client Invoiced Off System&quot;),
ISPICKVAL(Order_Product__r.Order.Booking_Type__c, &quot;Romania Bookings&quot;),
ISPICKVAL(Order_Product__r.Order.Booking_Type__c, &quot;Malaysia Bookings&quot;),
ISPICKVAL(Order_Product__r.Order.Billing_Mode__c , &quot;Billed off-system&quot;)
)</formula>
    <inlineHelpText>Indicates whether delivery should be excluded from revenue recognition.  If true, no Revenue Transaction will be created.</inlineHelpText>
    <label>Revenue Recognition Excluded</label>
    <type>Checkbox</type>
</CustomField>