salesforce-main/src/main/default/objects/Delivery__c/fields/Revenue_Recognition_Triggered__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognition_Triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>New checkbox, checked when call is made to Rev Rec API and used to prevent duplicate calls.</description>
    <label>Revenue Recognition Triggered</label>
    <type>Checkbox</type>
</CustomField>