salesforce-main/src/main/default/objects/Delivery__c/fields/Sent_for_Fulfilment_On__c.field-meta.xml
<CustomField>
    <fullName>Sent_for_Fulfilment_On__c</fullName>
    <label>Sent for Fulfilment On</label>
    <type>Date</type>
</CustomField>