salesforce-main/src/main/default/objects/Delivery__c/fields/Stock_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Stock_Allocated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows stock has been allocated for this delivery</description>
    <label>Stock Allocated</label>
    <type>Checkbox</type>
</CustomField>