salesforce-main/src/main/default/objects/Delivery__c/fields/Stock_Allocated_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Stock_Allocated_Indicator__c</fullName>
    <description>Green tick if stock has been allocated</description>
    <formula>IF( Stock_Allocated__c = TRUE,
IMAGE( &quot;/img/func_icons/util/checkmark16.gif&quot;, &quot;Stock Allocated&quot;),
NULL)</formula>
    <label>Stock Allocated</label>
    <type>Text</type>
</CustomField>