salesforce-main/src/main/default/objects/Delivery__c/fields/Stock_Management__c.field-meta.xml
<CustomField>
    <fullName>Stock_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stock management record controlling the stock allocation for this delivery</description>
    <label>Stock Management</label>
    <referenceTo>Stock_Management__c</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>StockManagement</relationshipName>
    <type>Lookup</type>
</CustomField>