salesforce-main/src/main/default/objects/Delivery__c/fields/Stock_Management_Id__c.field-meta.xml
<CustomField>
    <fullName>Stock_Management_Id__c</fullName>
    <description>Name of the stock management record that is associated with the order product / stock site - used to populate the stock management record, which is only associated during active stock period (allocation-dispatch)</description>
    <label>Stock Management Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>