salesforce-main/src/main/default/objects/Delivery__c/fields/Stock_Management_Name__c.field-meta.xml
<CustomField>
    <fullName>Stock_Management_Name__c</fullName>
    <description>Name of the stock management record that is associated with the order product / stock site - stock management record is only associated during active stock period (allocation-dispatch)</description>
    <label>Stock Management Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>