salesforce-main/src/main/default/objects/Delivery__c/fields/Stock_Site__c.field-meta.xml
<CustomField>
    <fullName>Stock_Site__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Stock site where delivery will be dispatched from</description>
    <label>Stock Site</label>
    <referenceTo>Stock_Site__c</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>