salesforce-main/src/main/default/objects/Delivery__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight (kg)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>