salesforce-main/src/main/default/objects/Delivery__c/recordTypes/E_Delivery.recordType-meta.xml
<RecordType>
    <fullName>E_Delivery</fullName>
    <active>true</active>
    <description>Records that contain items that need to be sent electronically</description>
    <label>E-Delivery</label>
</RecordType>