salesforce-main/src/main/default/objects/Delivery__c/recordTypes/Physical_Delivery.recordType-meta.xml
<RecordType>
    <fullName>Physical_Delivery</fullName>
    <active>true</active>
    <description>Records that contain items requiring a physical dispatch</description>
    <label>Physical Delivery</label>
</RecordType>