salesforce-main/src/main/default/objects/Delivery__c/validationRules/Booking_Line_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Booking_Line_Required</fullName>
    <active>true</active>
    <description>If order product is not a standalone material product then there should be a booking line for the order</description>
    <errorConditionFormula>ISBLANK( Booking_Line__c )
 &amp;&amp; 
Order_Product__r.Product2.Standalone_Material__c = FALSE</errorConditionFormula>
    <errorDisplayField>Booking_Line__c</errorDisplayField>
    <errorMessage>Please add the booking line this delivery is fulfilling</errorMessage>
</ValidationRule>