salesforce-main/src/main/default/objects/Delivery__c/validationRules/Digital_Delivery_Status_Flow.validationRule-meta.xml
<ValidationRule>
    <fullName>Digital_Delivery_Status_Flow</fullName>
    <active>true</active>
    <description>Ensure that the Status field only moves to a valid status in relation to the previous value - E-Delivery record type</description>
    <errorConditionFormula>AND( RecordType.Name = &apos;E-Delivery&apos;,
OR(
AND( ISNEW(),
NOT( ISPICKVAL( Delivery_Status__c , &quot;On Hold&quot;)),
NOT( ISPICKVAL( Delivery_Status__c , &quot;Ready for Fulfilment&quot;))),
AND( ISCHANGED( Delivery_Status__c ),
OR(
ISPICKVAL( PRIORVALUE( Delivery_Status__c ), &quot;Cancelled&quot;) &amp;&amp;
NOT( ISPICKVAL( Delivery_Status__c , &quot;On Hold&quot;)) &amp;&amp;
NOT( ISPICKVAL( Delivery_Status__c , &quot;Ready for Fulfilment&quot;)),
ISPICKVAL( PRIORVALUE( Delivery_Status__c ), &quot;On Hold&quot;) &amp;&amp;
NOT( ISPICKVAL( Delivery_Status__c , &quot;Ready for Fulfilment&quot;)) &amp;&amp;
NOT( ISPICKVAL( Delivery_Status__c , &quot;Cancelled&quot;)),
ISPICKVAL( PRIORVALUE( Delivery_Status__c ), &quot;Ready for Fulfilment&quot;) &amp;&amp;
NOT( ISPICKVAL( Delivery_Status__c , &quot;On Hold&quot;)) &amp;&amp;
NOT( ISPICKVAL( Delivery_Status__c , &quot;Cancelled&quot;)) &amp;&amp;
NOT( ISPICKVAL( Delivery_Status__c , &quot;Sent for Fulfilment&quot;)),
ISPICKVAL( PRIORVALUE( Delivery_Status__c ), &quot;Sent for Fulfilment&quot;) &amp;&amp;
NOT( ISPICKVAL( Delivery_Status__c , &quot;Dispatched&quot;)),
ISPICKVAL( PRIORVALUE( Delivery_Status__c ), &quot;Dispatched&quot;)
)
)
)
)</errorConditionFormula>
    <errorDisplayField>Delivery_Status__c</errorDisplayField>
    <errorMessage>The record cannot be moved into that status</errorMessage>
</ValidationRule>