salesforce-main/src/main/default/objects/Delivery__c/validationRules/Physical_Delivery_Address_Incomplete.validationRule-meta.xml
<ValidationRule>
    <fullName>Physical_Delivery_Address_Incomplete</fullName>
    <active>true</active>
    <description>Ensures a delivery address is populated for all physical deliveries</description>
    <errorConditionFormula>AND( RecordType.Name = &apos;Physical Delivery&apos;,
NOT(ISNEW()),
NOT(ISPICKVAL( Delivery_Status__c , &apos;On Hold&apos;)),
NOT(ISPICKVAL( Delivery_Status__c , &apos;Cancelled&apos;)),
ISBLANK( Address_Line_1__c ) || 
ISBLANK( City__c ) ||
ISBLANK( Postal_Code__c ) ||
ISBLANK( Country__c )
)</errorConditionFormula>
    <errorDisplayField>Country__c</errorDisplayField>
    <errorMessage>A delivery address must be populated for all physical deliveries. This must include at least one address line, city, post code &amp; country.</errorMessage>
</ValidationRule>