salesforce-main/src/main/default/objects/Delivery__c/validationRules/Recipient_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Recipient_Name_Required</fullName>
    <active>true</active>
    <description>Physical Deliveries being sent to customer address require the Recipient Name field to be populated</description>
    <errorConditionFormula>RecordType.Name = &apos;Physical Delivery&apos; &amp;&amp;
NOT(ISBLANK(Delivered_to_Customer_Address__c)) &amp;&amp;
NOT(ISPICKVAL( Delivery_Status__c , &apos;On Hold&apos;)) &amp;&amp;
NOT(ISPICKVAL( Delivery_Status__c , &apos;Cancelled&apos;)) &amp;&amp;
ISBLANK(Recipient_Name__c)</errorConditionFormula>
    <errorDisplayField>Recipient_Name__c</errorDisplayField>
    <errorMessage>The delivery record requires a Recipient Name to be added</errorMessage>
</ValidationRule>